# ProjectTest

./: .qmake.stash  AICodingTest.pro  AICodingTest.vcxproj  AICodingTest.vcxproj.filters  CMakeLists.txt  README.md
debug/: AICodingTest.ilk  moc_predefs.h  moc_task.cpp  moc_threadpool.cpp
debug/AICodingTest.tlog/: AICodingTest.lastbuildstate  AICodingTest.write.1u.tlog  CL.11604.write.1.tlog  CL.command.1.tlog  CL.read.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
debug/qmake/temp/: .qmake.stash  B5C23186-301E-3C9D-B101-0E4662BEDD1E.AICodingTest.designtime.idx  qtvars.vcxproj  qtvars_x64_Debug.props
include/: task.h  threadpool.h
release/qmake/: qtvars_x64_Release.props
release/qmake/temp/: B5C23186-301E-3C9D-B101-0E4662BEDD1E.AICodingTest.designtime.idx  props.txt  qtvars.vcxproj
src/: main.cpp  task.cpp  threadpool.cpp
